# bayesian-prompt-optimization

./: .gitignore  README.md  pyproject.toml  settings.py
artefacts/: bayesian_posterior_means.csv  code_quality_model.rds  faithfulness_model.rds  means.csv  test_results.json  test_results_0.json  test_results_03.json  test_results_03_weighted.json  test_results_05.json  test_results_05_weighted.json  test_results_0_weighted.json  test_results_1.json  test_results_1_weighted.json  validation_results.json  variance_analysis.json
code/: bayesian_modeling.py  bayesian_modeling.r  code_quality_signature.py  faithfulness_signature.py  optimization.py  test.py  uncertainty_analysis.r  validation.py  variance_analysis.py
data/: Gonogo-150.xlsx  benchmark.json  benchmark_holdout.json  scores.json  scores_holdout.json
prompts/: code_quality_bayesian.json  code_quality_normal.json  faithfulness_bayesian.json  faithfulness_normal.json
