[tool.poetry]
package-mode = false

[project]
name = "bayesian-prompt-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "A523279",email = "tim.boleslawsky@volvo.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dspy (>=3.0.3,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

