[tool.poetry]
name = "bayesian_prompt_optimization"
version = "0.1.0"
description = ""
authors = ["A523279 <tim.boleslawsky@volvo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
dspy = ">=3.0.3,<4.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
pandas = ">=2.2.0,<3.0.0"
openpyxl = "^3.1.5"
numpy = ">=1.24.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

