[project]
name = "bayesian_prompt_optimization"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Tim Boleslawsky", email = "tim.boleslawsky@yahoo.com" }]
dependencies = [
  "dspy>=3.0.3,<4.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "numpy>=1.24.0,<2.0.0",
]

[tool.uv]
managed = true

[tool.uv.environments.default]
path = ".venv"
